# vines

./: Dockerfile  README.md  biome.json  compose.yaml  package.json  pnpm-workspace.yaml  turbo.json
.changeset/: config.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: main.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src/app/: app.module.ts  app.store.ts  app.tsx
apps/desktop/src/app/router/: app-route-tree.ts  app-router.ts
apps/desktop/src/backend/: app.interface.ts  index.ts
apps/desktop/src/backend/domain/: app.ts  library.tsx  node.ts
apps/desktop/src/backend/local/: app-settings.controller.ts  app.controller.ts  index.ts  library.controller.ts
apps/desktop/src/backend/web/: app-history.controller.ts  app-settings.controller.ts  index.ts  library.controller.ts  web.backend.ts
apps/desktop/src/features/board/: board.ts  (+6 more)
apps/web/: index.html  package.json  rsbuild.config.ts  tsconfig.json
apps/web/public/: manifest.json
apps/web/src/: index.css  index.tsx  missing-types.d.ts
apps/web/src/app/: app.module.ts  app.react.tsx
apps/web/src/backend/: backend.module.ts  usecase.hook.ts  usecase.impl.web.ts  usecase.interface.ts
apps/web/src/common/: constants.ts  event-emitter.ts
apps/web/src/landing/: first-use-setup.page.tsx  landing.page.tsx  landing.route.ts  setup.page.tsx
apps/web/src/workspace/: vines-board.module.ts  vines-board.page.tsx  vines-board.route.ts  workspace.module.ts  workspace.page.tsx  workspace.route.ts
design-docs/: overview.md
(+213 files in other folders)
