[package]
name = "viness"
version = "0.0.0"
description = ""
authors = ["lei"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.0", features = [] }
tauri-plugin-fs = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-single-instance = "2.2.0"

